fix: prevent html container overflow scrolling

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,10 @@
   --reach-dialog: 1;
 }
 
+html {
+  overflow: hidden;
+}
+
 body * {
   @apply font-body;
 }
